--- a/UPnPTest/en.lproj/MainMenu.xib
+++ b/UPnPTest/en.lproj/MainMenu.xib
@@ -21,6 +21,7 @@
                 <outlet property="queueDrawer" destination="ZSY-0A-cvb" id="qzf-Qx-6Vq"/>
                 <outlet property="queueTable" destination="RfE-D3-9Dx" id="cM5-Tg-81z"/>
                 <outlet property="slider" destination="OTk-XD-jGl" id="Kb8-Jo-Es7"/>
+                <outlet property="sliderDrawer" destination="8km-sP-aqq" id="qL4-1w-I06"/>
                 <outlet property="toggleDrawer" destination="Q1j-OB-3rx" id="UsP-dR-qT4"/>
                 <outlet property="wheel" destination="gfa-Ja-6qF" id="NPV-p6-g4e"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
@@ -193,7 +194,7 @@
                     </button>
                 </subviews>
             </view>
-            <point key="canvasLocation" x="188" y="141.5"/>
+            <point key="canvasLocation" x="276" y="151.5"/>
         </window>
         <customView id="xQQ-Va-2Hr" userLabel="BottomDrawer">
             <rect key="frame" x="0.0" y="0.0" width="300" height="70"/>
@@ -255,12 +256,12 @@
             <subviews>
                 <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e0a-Te-Ywi">
                     <rect key="frame" x="11" y="20" width="127" height="178"/>
-                    <clipView key="contentView" id="uE8-SX-wVs">
+                    <clipView key="contentView" misplaced="YES" id="uE8-SX-wVs">
                         <rect key="frame" x="1" y="0.0" width="238" height="134"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" headerView="pwz-FR-E7s" id="RfE-D3-9Dx">
-                                <rect key="frame" x="0.0" y="0.0" width="238" height="134"/>
+                                <rect key="frame" x="0.0" y="0.0" width="125" height="19"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -291,7 +292,7 @@
                         <rect key="frame" x="1" y="119" width="223" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
-                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="2Uq-xI-lOk">
+                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="2Uq-xI-lOk">
                         <rect key="frame" x="224" y="17" width="15" height="102"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
