--- a/UPnPTest/en.lproj/MainMenu.xib
+++ b/UPnPTest/en.lproj/MainMenu.xib
@@ -182,16 +182,6 @@
                             <action selector="updateSSDP:" target="Voe-Tx-rLC" id="yF8-GX-NRm"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mNY-bt-CcM">
-                        <rect key="frame" x="264" y="179" width="21" height="21"/>
-                        <buttonCell key="cell" type="squareTextured" bezelStyle="texturedSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="axesIndependently" inset="2" id="9VT-jq-GAr">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="system"/>
-                        </buttonCell>
-                        <connections>
-                            <action selector="toggle:" target="ZSY-0A-cvb" id="Uxf-U3-IBs"/>
-                        </connections>
-                    </button>
                 </subviews>
             </view>
             <point key="canvasLocation" x="276" y="151.5"/>
@@ -254,17 +244,17 @@
             <rect key="frame" x="0.0" y="0.0" width="148" height="218"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e0a-Te-Ywi">
+                <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e0a-Te-Ywi">
                     <rect key="frame" x="11" y="20" width="127" height="178"/>
-                    <clipView key="contentView" misplaced="YES" id="uE8-SX-wVs">
+                    <clipView key="contentView" misplaced="YES" drawsBackground="NO" id="uE8-SX-wVs">
                         <rect key="frame" x="1" y="0.0" width="238" height="134"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" headerView="pwz-FR-E7s" id="RfE-D3-9Dx">
+                            <tableView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" headerView="pwz-FR-E7s" id="RfE-D3-9Dx">
                                 <rect key="frame" x="0.0" y="0.0" width="125" height="19"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
                                     <tableColumn editable="NO" width="122.39453125" minWidth="40" maxWidth="1000" id="ZNC-9j-Hed">
@@ -283,16 +273,17 @@
                                 </tableColumns>
                                 <connections>
                                     <outlet property="dataSource" destination="Voe-Tx-rLC" id="5nz-Le-LHO"/>
+                                    <outlet property="delegate" destination="Voe-Tx-rLC" id="Fpl-Bp-bbY"/>
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.94602372793206924" blue="0.98130511462018233" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="backgroundColor"/>
                     </clipView>
-                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="Dh3-QU-eXo">
+                    <scroller key="horizontalScroller" hidden="YES" appearanceType="vibrantLight" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="Dh3-QU-eXo">
                         <rect key="frame" x="1" y="119" width="223" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
-                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="2Uq-xI-lOk">
+                    <scroller key="verticalScroller" hidden="YES" appearanceType="vibrantLight" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="2Uq-xI-lOk">
                         <rect key="frame" x="224" y="17" width="15" height="102"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
@@ -309,7 +300,7 @@
                 <constraint firstItem="e0a-Te-Ywi" firstAttribute="leading" secondItem="mdV-Zc-Tgb" secondAttribute="leading" constant="11" id="WxJ-Jr-utZ"/>
                 <constraint firstAttribute="centerY" secondItem="e0a-Te-Ywi" secondAttribute="centerY" id="p2P-fb-FeK"/>
             </constraints>
-            <point key="canvasLocation" x="268" y="241"/>
+            <point key="canvasLocation" x="213" y="349"/>
         </customView>
         <drawer trailingOffset="15" id="ZSY-0A-cvb">
             <size key="contentSize" width="125" height="100"/>
