- NSAlert in case of no network connection - Toggle Queue drawer via menu

--- a/UPnPTest/en.lproj/MainMenu.xib
+++ b/UPnPTest/en.lproj/MainMenu.xib
@@ -107,17 +107,10 @@
                                     <action selector="performMiniaturize:" target="-1" id="VwT-WD-YPe"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Zoom" id="R4o-n2-Eq4">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <connections>
-                                    <action selector="performZoom:" target="-1" id="DIl-cC-cCs"/>
-                                </connections>
-                            </menuItem>
                             <menuItem isSeparatorItem="YES" id="eu3-7i-yIM"/>
-                            <menuItem title="Bring All to Front" id="LE2-aR-0XJ">
-                                <modifierMask key="keyEquivalentModifierMask"/>
+                            <menuItem title="Toggle Queue" keyEquivalent="l" id="kiB-SS-hnM">
                                 <connections>
-                                    <action selector="arrangeInFront:" target="-1" id="DRN-fu-gQh"/>
+                                    <action selector="toggle:" target="ZSY-0A-cvb" id="klm-H4-Dc7"/>
                                 </connections>
                             </menuItem>
                         </items>
