--- a/UPnPTest/en.lproj/MainMenu.xib
+++ b/UPnPTest/en.lproj/MainMenu.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
     <objects>
@@ -17,6 +18,7 @@
                 <outlet property="deviceInfo" destination="5M8-GP-qYd" id="JFd-38-FXj"/>
                 <outlet property="dragView" destination="c8J-qd-HEt" id="Wsg-qJ-ei7"/>
                 <outlet property="durLabel" destination="vJA-fa-od8" id="tfJ-Fa-gr8"/>
+                <outlet property="openItem" destination="IAo-SY-fd9" id="ePg-hS-AN0"/>
                 <outlet property="popover" destination="VI4-Jg-WAs" id="dei-yv-xkp"/>
                 <outlet property="posLabel" destination="FeP-6H-JaR" id="WOy-bn-rU3"/>
                 <outlet property="queueDrawer" destination="ZSY-0A-cvb" id="qzf-Qx-6Vq"/>
@@ -78,11 +80,11 @@
                 </menuItem>
                 <menuItem title="File" id="dMs-cI-mzQ">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="File" id="bib-Uj-vzu">
+                    <menu key="submenu" title="File" autoenablesItems="NO" id="bib-Uj-vzu">
                         <items>
-                            <menuItem title="Open…" keyEquivalent="o" id="IAo-SY-fd9">
+                            <menuItem title="Open…" enabled="NO" keyEquivalent="o" id="IAo-SY-fd9">
                                 <connections>
-                                    <action selector="openDocument:" target="-1" id="bVn-NM-KNZ"/>
+                                    <action selector="openFile:" target="Voe-Tx-rLC" id="buB-cF-0lY"/>
                                 </connections>
                             </menuItem>
                         </items>
